Fix/adimn and contract related 20251021 (#50)
* refactor(user): Refactor user service logic for GetAllUsers
- Add AvatarURL to users model
- Add IsBrandAccount field to response if the user account belong to a
  brand
- Update filter request logic

* fix(admin_config): Fix not able to return config responses

* feat: Add BrandBankAccountHolder field to Contract model and DTOs

* fix: remove the constraint of only 4 quarter date only

* refactor: format code

* refactor: Update .gitignore

* refactor: Update Swagger docs
